# streamlit-clickable-list

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.py  setup.py
demo/: demo.py  requirements.txt
streamlit_clickable_list/frontend/: .env  package-lock.json  package.json
streamlit_clickable_list/frontend/src/: ClickableList.tsx  index.tsx
